<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.About_fragment"
    android:background="#FFF7DA">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="367dp"
            android:layout_height="327dp"
            android:contentDescription="@string/namaste"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="369dp"
            android:layout_height="74dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/amaranth_bold"
            android:text="@string/quote"
            android:textColor="#F44336"
            android:textSize="@dimen/text_size2"
            android:textStyle="bold"
            tools:ignore="SpUsage">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/adamina"
            android:text="@string/message"
            android:textColor="#AC8102"
            android:textSize="@dimen/text_size1"
            android:textStyle="normal"
            tools:ignore="SpUsage">

        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/garland"
            android:contentDescription="@string/namaste"/>

    </LinearLayout>





</ScrollView>